[package]
name = "meteora-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
carbon-core = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-log-metrics = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-meteora-dlmm-decoder = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-rpc-transaction-crawler-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
carbon-rpc-program-subscribe-datasource = { git = "https://github.com/sevenlabs-hq/carbon", branch = "main", version = "0.8.0" }
log = "0.4"
dotenv = "0.15.0"
env_logger = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20.2"
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["full"] }
solana-sdk = "=2.1.16"
solana-account-decoder = "=2.1.16"
solana-client = "=2.1.16"
mpl-token-metadata = "5.1.0"
borsh = "0.9"
thiserror = "1.0"
teloxide = { version = "0.15.0", features = ["macros", "throttle"] }